Lots of changes to update to use newest SP version.

--- a/resource/source-python/translations/victim_stats/strings.ini
+++ b/resource/source-python/translations/victim_stats/strings.ini
@@ -1,29 +1,62 @@
-[Default Type]
-en = "Set to the default type to use for victim stats display"
+[Title]
+en = "Victim Stats"
 
-[Type]
+
+[default_display_type]
+en = "Set to the default display type to use for victim stats"
+
+
+[Menu:default_display_type]
 en = "Display Type"
 
-[0]
+
+[default_display_type:0]
 en = "Off"
 
-[1]
+
+[default_display_type:1]
 en = "Chat"
 
-[2]
+
+[default_display_type:2]
 en = "Chat w/o hitgroups"
 
-[3]
+
+[default_display_type:3]
 en = "Menu"
 
-[4]
+
+[default_display_type:4]
 en = "Menu w/o hitgroups"
 
-[5]
+
+[default_display_type:5]
 en = "Interactive menu"
+
+
+[default_distance_type]
+en = "Set to the default distance type to use for victim stats"
+
+
+[Menu:default_distance_type]
+en = "Distance Type"
+
+
+[default_distance_type:0]
+en = "Feet"
+
+
+[default_distance_type:1]
+en = "Meters"
+
+
+[default_distance_type:2]
+en = "Meters (feet)"
+
 
 [Suicide]
 en = "You commited suicide..."
 
+
 [Team Killed]
-en = "You were team-killed by $name..."
+en = "You were team-killed by {name}..."
