--- a/resource/source-python/translations/victim_stats/orangebox.ini
+++ b/resource/source-python/translations/victim_stats/orangebox.ini
@@ -1,54 +1,54 @@
 [Chat Attacker Single]
-en = "$color[Attacker]\x03 $name\x01 $damage dmg 1 hit"
+en = "{color}[Attacker]\x03 {name}\x01 {damage} dmg 1 hit"
 
 [Chat Attacker Single Hitgroups]
-en = "$color[Attacker]\x03 $name\x01 $damage dmg 1 hit - $hitgroups"
+en = "{color}[Attacker]\x03 {name}\x01 {damage} dmg 1 hit - {hitgroups}"
 
 [Chat Attacker Multi]
-en = "$color[Attacker]\x03 $name\x01 $damage dmg $hits hits"
+en = "{color}[Attacker]\x03 {name}\x01 {damage} dmg {hits} hits"
 
 [Chat Attacker Multi Hitgroups]
-en = "$color[Attacker]\x03 $name\x01 $damage dmg $hits hits - $hitgroups"
+en = "{color}[Attacker]\x03 {name}\x01 {damage} dmg {hits} hits - {hitgroups}"
 
 [Chat Wounded Single]
-en = "$color[Wounded]\x03 $name\x01 $damage dmg 1 hit"
+en = "{color}[Wounded]\x03 {name}\x01 {damage} dmg 1 hit"
 
 [Chat Wounded Single Hitgroups]
-en = "$color[Wounded]\x03 $name\x01 $damage dmg 1 hit - $hitgroups"
+en = "{color}[Wounded]\x03 {name}\x01 {damage} dmg 1 hit - {hitgroups}"
 
 [Chat Wounded Multi]
-en = "$color[Wounded]\x03 $name\x01 $damage dmg $hits hits"
+en = "{color}[Wounded]\x03 {name}\x01 {damage} dmg {hits} hits"
 
 [Chat Wounded Multi Hitgroups]
-en = "$color[Wounded]\x03 $name\x01 $damage dmg $hits hits - $hitgroups"
+en = "{color}[Wounded]\x03 {name}\x01 {damage} dmg {hits} hits - {hitgroups}"
 
 [Chat Killed Single]
-en = "$color[Killed$headshot]\x03 $name\x01 $damage dmg 1 hit\x04 $weapon\x01 @ $distance"
+en = "{color}[Killed{headshot}]\x03 {name}\x01 {damage} dmg 1 hit\x04 {weapon}\x01 @ {distance}"
 
 [Chat Killed Single Hitgroups]
-en = "$color[Killed$headshot]\x03 $name\x01 $damage dmg 1 hit\x04 $weapon\x01 @ $distance - $hitgroups"
+en = "{color}[Killed{headshot}]\x03 {name}\x01 {damage} dmg 1 hit\x04 {weapon}\x01 @ {distance} - {hitgroups}"
 
 [Chat Killed Multi]
-en = "$color[Killed$headshot]\x03 $name\x01 $damage dmg $hits hits\x04 $weapon\x01 @ $distance"
+en = "{color}[Killed{headshot}]\x03 {name}\x01 {damage} dmg {hits} hits\x04 {weapon}\x01 @ {distance}"
 
 [Chat Killed Multi Hitgroups]
-en = "$color[Killed$headshot]\x03 $name\x01 $damage dmg $hits hits\x04 $weapon\x01 @ $distance - $hitgroups"
+en = "{color}[Killed{headshot}]\x03 {name}\x01 {damage} dmg {hits} hits\x04 {weapon}\x01 @ {distance} - {hitgroups}"
 
 [Chat Multi Kills]
-en = "$color[Killed]\x03 $name\x01 $damage dmg $kills kills"
+en = "{color}[Killed]\x03 {name}\x01 {damage} dmg {kills} kills"
 
 [Chat Killer Alive]
-en = "$color[Killer$headshot]\x03 $name\x04 $weapon\x01 @ $distance still has\x04 $health\x01 hp"
+en = "{color}[Killer{headshot}]\x03 {name}\x04 {weapon}\x01 @ {distance} still has\x04 {health}\x01 hp"
 
 [Chat Killer Dead]
-en = "$color[Killer$headshot]\x03 $name\x04 $weapon\x01 @ $distance is dead"
+en = "{color}[Killer{headshot}]\x03 {name}\x04 {weapon}\x01 @ {distance} is dead"
 
 [Options]
 en = """Set each variable to either a color constant or an r,g,b value.
 
 Available color constants:
 
-\t$colors
+\t{colors}
 
 To set to r,g,b values, each rgb value must be between 0 and 255.
 Use the following syntax:
