Moved strings into victim_stats.strings module.
Removed engine-specific translations.

Reorganized strings into strings/config_strings translation files.

--- a/resource/source-python/translations/victim_stats/strings.ini
+++ b/resource/source-python/translations/victim_stats/strings.ini
@@ -1,57 +1,57 @@
-[Title]
-en = "Victim Stats"
+[Base]
+en = "{type_color}{type}{headshot}{name_color} {name}{damage_color} {damage} dmg{weapon_info}{hitgroup_info}"
 
 
-[default_display_type]
-en = "Set to the default display type to use for victim stats"
+[Base:Weapon]
+en = "{weapon_color} {weapon}{at_color} @{distance_color} {distance}{at_color}"
 
 
-[Menu:default_display_type]
-en = "Display Type"
+[Killer]
+en = "{type_color}Killer{headshot}{name_color} {name}{weapon_info} still has {health} hp left"
 
 
-[default_display_type:0]
-en = "Off"
+[Killer:Dead]
+en = "{type_color}Killer{headshot}{name_color} {name}{weapon_info} is dead"
 
 
-[default_display_type:1]
-en = "Chat"
+[Type:Attacker]
+en = "Attacker"
 
 
-[default_display_type:2]
-en = "Chat w/o hitgroups"
+[Type:Attackers]
+en = "Attackers"
 
 
-[default_display_type:3]
-en = "Menu"
+[Type:Wounded]
+en = "Wounded"
 
 
-[default_display_type:4]
-en = "Menu w/o hitgroups"
+[Type:Killed]
+en = "Killed"
 
 
-[default_display_type:5]
-en = "Interactive menu"
+[Type:Killer]
+en = "Killer"
 
 
-[default_distance_type]
-en = "Set to the default distance type to use for victim stats"
+[Hits:Single]
+en = " 1 hit"
 
 
-[Menu:default_distance_type]
-en = "Distance Type"
+[Hits:Multi]
+en = " {hits} hits"
 
 
-[default_distance_type:0]
-en = "Feet"
+[Hitgroups]
+en = " - {hitgroups}"
 
 
-[default_distance_type:1]
-en = "Meters"
+[Headshot]
+en = " (HS)"
 
 
-[default_distance_type:2]
-en = "Meters (feet)"
+[Kills]
+en = " {kills} kills"
 
 
 [Suicide]
@@ -60,3 +60,47 @@ en = "You commited suicide..."
 
 [Team Killed]
 en = "You were team-killed by {name}..."
+
+
+[Distance:0]
+en = "{meters}m"
+
+
+[Distance:1]
+en = "{feet}ft"
+
+
+[Distance:2]
+en = "{meters}m ({feet}ft)"
+
+
+[Hitgroup:0]
+en = "Body"
+
+
+[Hitgroup:1]
+en = "Head"
+
+
+[Hitgroup:2]
+en = "Chest"
+
+
+[Hitgroup:3]
+en = "Stomach"
+
+
+[Hitgroup:4]
+en = "L Arm"
+
+
+[Hitgroup:5]
+en = "R Arm"
+
+
+[Hitgroup:6]
+en = "L Leg"
+
+
+[Hitgroup:7]
+en = "R Leg"
